--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,17 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      /* CSS rules go here */
+      body {
+        background-image: linear-gradient(
+          to right,
+          rgb(199, 210, 254),
+          rgb(254, 202, 202),
+          rgb(254, 249, 195)
+        );
+      }
+    </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
